@@ -51,7 +51,6 @@
 				<configuration>
 					<source>22</source>
 					<target>22</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
 			</plugin>
 		</plugins>
